Changed title to TeaTable

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>Hot&Cold Editor</title>
+    <title>TeaTable - Deploy your Coffee here!</title>
     <link rel="stylesheet" href="style/lib/cm/codemirror.css">
 		<link rel="stylesheet" href="style/lib/cmcs/coffeescriptdark.css">
 		<link rel="stylesheet" href="style/editorstyle.css">
