--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
   <head>
     <title>TeaTable - Deploy your Coffee here!</title>
+    <meta content="text/html;charset=utf-8" http-equiv="Content-Type">
+    <meta content="utf-8" http-equiv="encoding">
     <link rel="stylesheet" href="style/lib/cm/codemirror.css">
 		<link rel="stylesheet" href="style/lib/cmcs/coffeescriptdark.css">
 		<link rel="stylesheet" href="style/editorstyle.css">
