--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/lib/cm/codemirror.css">
 		<link rel="stylesheet" href="style/lib/cmcs/coffeescriptdark.css">
 		<link rel="stylesheet" href="style/editorstyle.css">
+    <script type="text/javascript"> if (!window.console) console = {log: function() {}}; </script>
     <script data-main="scripts/main" src="scripts/lib/requirejs/require-jquery.js"></script>
   </head>
   <body>
